--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Bunny.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BunnyWorldApplication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Bunny.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
