--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj
@@ -80,11 +80,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bunny.h" />
+    <ClInclude Include="BunnyRandomGenerator.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bunny.cpp" />
+    <ClCompile Include="BunnyRandomGenerator.cpp" />
     <ClCompile Include="BunnyWorldApplication.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
