--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Bunny.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BunnyRandomGenerator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Bunny.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BunnyRandomGenerator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
