--- a/SanBoxForCPPConcepts/SanBoxForCPPConcepts.vcxproj
+++ b/SanBoxForCPPConcepts/SanBoxForCPPConcepts.vcxproj
@@ -79,11 +79,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="LinkedList.cpp" />
     <ClCompile Include="Node.cpp" />
     <ClCompile Include="SanBoxForCPPConcepts.cpp" />
     <ClCompile Include="stdafx.cpp">
