--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj
@@ -81,6 +81,7 @@
   <ItemGroup>
     <ClInclude Include="Bunny.h" />
     <ClInclude Include="BunnyRandomGenerator.h" />
+    <ClInclude Include="Node.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -88,6 +89,7 @@
     <ClCompile Include="Bunny.cpp" />
     <ClCompile Include="BunnyRandomGenerator.cpp" />
     <ClCompile Include="BunnyWorldApplication.cpp" />
+    <ClCompile Include="Node.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
