--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Bunny.h" />
+    <ClInclude Include="BunnyDataStructure.h" />
     <ClInclude Include="BunnyRandomGenerator.h" />
     <ClInclude Include="BunnyNode.h" />
     <ClInclude Include="stdafx.h" />
@@ -87,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Bunny.cpp" />
+    <ClCompile Include="BunnyDataStructure.cpp" />
     <ClCompile Include="BunnyRandomGenerator.cpp" />
     <ClCompile Include="BunnyWorldApplication.cpp" />
     <ClCompile Include="BunnyNode.cpp" />
