--- a/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
+++ b/BunnyWorldApplication/BunnyWorldApplication.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="BunnyNode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BunnyDataStructure.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="BunnyNode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BunnyDataStructure.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
